# vmouse

./: .gitignore  Device.c  Device.h  Driver.c  Driver.h  LICENSE  Memory.c  Memory.h  Queue.c  Queue.h  QueueManual.c  README.md  vmouse.inf
vmouse/: vmouse.sln
vmouse/vmouse/: Device.c  Device.h  DispatchQueue.c  DispatchQueue.h  Driver.c  Driver.h  HelperFunctions.c  HelperFunctions.h  Hid.h  Queue.c  Queue.h  vmouse.inf  vmouse.vcxproj  vmouse.vcxproj.filters
vmouse_client/: CMakeLists.txt  vmouse_client.sln
vmouse_client/include/vmouse_client/: Device.hpp  Mouse.hpp  Registry.hpp
vmouse_client/src/: CMakeLists.txt  Client.cpp  Device.cpp  Mouse.cpp  Registry.cpp
vmouse_client/vmouse_client/: Client.cpp  Device.cpp  Device.h  Mouse.cpp  Mouse.h  RegistryService.cpp  RegistryService.h  vmouse_client.vcxproj  vmouse_client.vcxproj.filters
